crates/sgf-core/tests/snapshots/ops_scenario_lanes/add_lane_2_16.snap
---
source: crates/sgf-core/tests/common/mod.rs
expression: value
---
Added lane Coruscant #2 <-> system #16
touched: [2, 16]
inverse: RemoveLane { a: 2, b: 16 }
warning coordinate_transform: the scenario has a coordinate_transform; positions are shown untransformed
… and 2 other issues

--- scenario
+++ scenario
@@ -64,4 +64,5 @@
 
 	nebula = { name = "NAME_N_Heart_Galaxy" position = { x = 0 y = 0 } radius = 60 }
 	nebula = { name = "Far Cloud" position = { x = -90 y = 90 } radius = 20 }
+	add_hyperlane = { from = "2" to = "16" }
 }
