crates/sgf-core/tests/snapshots/ops_scenario_lanes/add_lane_pairs.snap
---
source: crates/sgf-core/tests/ops_scenario_lanes.rs
expression: "report(&session, &result)"
---
Added 2 lanes
touched: [2, 9, 3018]
inverse: RemoveLanePairs { lanes: [(2, 9), (9, 3018)] }
warning coordinate_transform: the scenario has a coordinate_transform; positions are shown untransformed
info rolled_near_seat: Within 2 hyperlane jumps of a seat, the game fills Lonely, #16 and Corellia at random. Nothing keeps leviathans, marauder homes or L-Gates away from a capital.
… and 1 other issues

--- scenario
+++ scenario
@@ -64,4 +64,6 @@
 
 	nebula = { name = "NAME_N_Heart_Galaxy" position = { x = 0 y = 0 } radius = 60 }
 	nebula = { name = "Far Cloud" position = { x = -90 y = 90 } radius = 20 }
+	add_hyperlane = { from = "2" to = "9" }
+	add_hyperlane = { from = "9" to = "3018" }
 }
