crates/sgf-core/tests/snapshots/ops_scenario_lanes/isolate_system_1.snap
---
source: crates/sgf-core/tests/ops_scenario_lanes.rs
expression: "report(&session, &result)"
---
Isolated Galactic Center #1: removed 2 lanes (4 statements)
touched: [1, 2, 16]
inverse: AddLanes { from: 1, to: [(2, false), (16, false)] }
warning system_isolated: system 1 has no hyperlanes
warning system_isolated: system 2 has no hyperlanes
warning disconnected: galaxy has 4 components, 2 at load; newly separated: 1, 2
warning coordinate_transform: the scenario has a coordinate_transform; positions are shown untransformed
… and 2 other issues

--- scenario
+++ scenario
@@ -52,10 +52,6 @@
 	system = { id = "512" name = "Flagged" position = { x = 70 y = -20 } initializer = misc_system_init_02 spawn_weight = { modifier = { add = 10000 has_country_flag = sgf_grammar } } }
 	system = { id = "888" name = "Reserved" position = { x = 90 y = -60 } initializer = custom_starting_init_01 spawn_weight = { base = 1 modifier = { factor = 0 is_ai = yes } } }
 
-	add_hyperlane = { from = "1" to = "2" }
-	add_hyperlane = { from = "2" to = "1" }
-	add_hyperlane = { from = "1" to = "16" }
-	add_hyperlane = { from = "1" to = "16" }
 	add_hyperlane = { from = "16" to = "111" }
 	add_hyperlane = { from = "111" to = "3018" }
 	prevent_hyperlane = { from = "9" to = "1" }
