crates/sgf-core/tests/snapshots/ops_scenario_lanes/remove_lane_1_16.snap
---
source: crates/sgf-core/tests/common/mod.rs
expression: value
---
Removed lane Galactic Center #1 <-> system #16 (2 statements)
touched: [1, 16]
inverse: AddLane { a: 1, b: 16, bridge: false }
warning disconnected: galaxy has 3 components, 2 at load; newly separated: 1, 2
warning coordinate_transform: the scenario has a coordinate_transform; positions are shown untransformed
… and 2 other issues

--- scenario
+++ scenario
@@ -54,8 +54,6 @@
 
 	add_hyperlane = { from = "1" to = "2" }
 	add_hyperlane = { from = "2" to = "1" }
-	add_hyperlane = { from = "1" to = "16" }
-	add_hyperlane = { from = "1" to = "16" }
 	add_hyperlane = { from = "16" to = "111" }
 	add_hyperlane = { from = "111" to = "3018" }
 	prevent_hyperlane = { from = "9" to = "1" }
